tests/NormalTests/paczka1/small_fuzzy/36697137.err
Error in line 2: xsf A235 41,8
Error in line 13: S475 S885 2,84
